<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_custom_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diet_custom_food_name_hint"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/et_custom_food_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/diet_custom_food_calorie_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_custom_food_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/diet_custom_food_protein_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_custom_food_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/diet_custom_food_carbs_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_custom_food_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/diet_custom_food_fat_hint"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinner_custom_food_meal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>
